Update footer and reorganize the origins mod

--- a/styles.less
+++ b/styles.less
@@ -378,23 +378,6 @@ a {
   }
   // ==================== END Journey Mod Styles ====================
 
-  // ==================== Origins Mod Styles ====================
-  #origins-mod {
-    background-image: url('./assets/ghibli_workshop_wide_v2.png');
-    background-size: 100%;
-    background-position: top;
-    padding: 10vh 0;
-    .golden-gradient-brown-wrapper {
-      width: 60%;
-      margin: 0 auto;
-      .golden-gradient-brown-content {
-        h2 {
-          font-size: 3.2rem;
-          padding: 10vh 0;
-        }
-      }
-    }
-  }
 }
  
 footer { 
@@ -404,6 +387,18 @@ footer {
     width: 80%;
     margin: 0 auto;
     padding: 10vh 0 6vh;
+    h1 {
+      font-family: 'Saint-Carell-Regular', Arial, sans-serif;
+      font-size: 40px;
+      line-height: 52px; 
+      padding-bottom: 30px;
+    }
+    h2 {
+      font-family: Georgia, 'Times New Roman', Times, serif;
+      font-size: 20px;
+      line-height: 30px;  
+      padding: 0 80px 40px;
+    }
     p {
       font-size: 14px;
       line-height: 20px;
