--- a/styles.css
+++ b/styles.css
@@ -307,20 +307,6 @@ a {
   font-size: 18px;
   line-height: 30px;
 }
-#desktop-main #origins-mod {
-  background-image: url('./assets/ghibli_workshop_wide_v2.png');
-  background-size: 100%;
-  background-position: top;
-  padding: 10vh 0;
-}
-#desktop-main #origins-mod .golden-gradient-brown-wrapper {
-  width: 60%;
-  margin: 0 auto;
-}
-#desktop-main #origins-mod .golden-gradient-brown-wrapper .golden-gradient-brown-content h2 {
-  font-size: 3.2rem;
-  padding: 10vh 0;
-}
 footer {
   background-color: #0c0902;
   border-top: 1px solid #f7e77c;
@@ -329,6 +315,18 @@ footer #inner-wrapper {
   width: 80%;
   margin: 0 auto;
   padding: 10vh 0 6vh;
+}
+footer #inner-wrapper h1 {
+  font-family: 'Saint-Carell-Regular', Arial, sans-serif;
+  font-size: 40px;
+  line-height: 52px;
+  padding-bottom: 30px;
+}
+footer #inner-wrapper h2 {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 20px;
+  line-height: 30px;
+  padding: 0 80px 40px;
 }
 footer #inner-wrapper p {
   font-size: 14px;
